<resources>
    <string name="app_name">Background Color</string>
    <string name="action_settings">Settings</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="white">White</string>
    <string name="instructions">Select a color to change the background</string>
</resources>
